employee info alignment fixed

--- a/common/css/base/_employee-info.sass
+++ b/common/css/base/_employee-info.sass
@@ -10,7 +10,7 @@
 
 .employee-info__name
   flex: 0 1 100%
-  padding: .5rem .5rem 0 1rem
+  padding: 1rem .5rem 0 1rem
   font-size: 24px
   line-height: 1.2
   color: #333
@@ -27,14 +27,14 @@
   width: 3rem
 
 .employee-info__post_title
-  margin-top: .5rem
+  margin-top: 1rem
   font-size: 18px
   line-height: 1.2
   color: #444
   padding: 0 1rem
 
 .employee-info__unit_title
-  margin-top: .5rem
+  margin-top: 1rem
   font-size: 18px
   line-height: 1.2
   color: #777
@@ -62,18 +62,26 @@
 .employee-info__iconed-data
   margin-top: 1rem
   display: flex
+  align-items: stretch
 
 .employee-info__data-icon
-  flex: 0 0 48px
+  flex: 0 0 32px
+  display: flex
+  align-items: center
 
-.employee-info__data-data
+  svg
+    display: block
+    flex: 0 0 100%
+    path
+      fill: #888
+
+.employee-info__data-container
   flex: 1 1 auto
   padding-left: 1rem
+  display: flex
+  align-items: center
+
+.employee-info__data-data
 
 .employee-info__location
   margin-top: 2rem
-
-.employee-info__lunch-data,
-.employee-info__birthday-data
-  padding-top: 1rem
-
